# krbai-sauvc-2026

./: .gitignore  Dockerfile  Makefile  README.md  attach.sh  build.sh  raspi-entrypoint.sh  run.sh
arduino_firmware/main_controller/: main_controller.ino
esp32_firmware/calibration/: calibration.ino
ros2_ws/src/eggplant/: package.xml  setup.cfg  setup.py
ros2_ws/src/eggplant/eggplant/: foobar.py
ros2_ws/src/eggplant_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/eggplant_bringup/launch/: eggplant.launch.py
ros2_ws/src/eggplant_controller/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/eggplant_controller/config/: kinematics.yaml
ros2_ws/src/eggplant_controller/include/eggplant_controller/: serial_manager.hpp  thrusters_8_kinematics.hpp
ros2_ws/src/eggplant_controller/launch/: eggplant_controller.launch.py  joystick.launch.py
ros2_ws/src/eggplant_controller/src/: joy_to_twist_node.cpp  serial_manager.cpp  thrusters_8_kinematics.cpp
ros2_ws/src/eggplant_waypoint/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/eggplant_waypoint/config/: demo.yaml  demo_zigzag.yaml  mission.yaml
ros2_ws/src/eggplant_waypoint/launch/: visualizer.launch.py  waypoint.launch.py
ros2_ws/src/eggplant_waypoint/rviz/: view.rviz
ros2_ws/src/eggplant_waypoint/src/: displacement_visualizer.cpp  waypoint_sequencer.cpp
ros2_ws/src/thrusters_8/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/thrusters_8/config/: thrusters_8.yaml
ros2_ws/src/thrusters_8/include/thrusters_8/: thrusters_8_node.hpp
ros2_ws/src/thrusters_8/launch/: joystick.launch.py  thrusters_8.launch.py
ros2_ws/src/thrusters_8/src/: thrusters_8_node.cpp
scripts/: camera_service.py  detect_flares_example.py  detect_gate_example.py  flare_detector.py  gate_detector.py
